--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/geojson": "^7946.0.16",
     "@types/jest": "^30.0.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/mapbox__mapbox-gl-draw": "^1.4.9",
