--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-draw": "^1.5.0",
+    "@react-leaflet/core": "^2.1.0",
     "@turf/turf": "^7.2.0",
-    "mapbox-gl": "^3.13.0",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -27,8 +29,9 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/geojson": "^7946.0.16",
     "@types/jest": "^30.0.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-draw": "^1.0.11",
     "@types/mapbox-gl": "^3.4.1",
-    "@types/mapbox__mapbox-gl-draw": "^1.4.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
@@ -39,6 +42,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "mapbox-gl": "^3.13.0",
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
