--- a/package.json
+++ b/package.json
@@ -1,25 +1,54 @@
 {
-  "name": "mapbox-interactive",
-  "private": true,
-  "version": "0.0.0",
+  "name": "leaflet-zone-selector",
+  "version": "0.1.0",
+  "description": "A React component for interactive geographic zone selection using Leaflet",
+  "keywords": ["leaflet", "react", "map", "zone", "selection", "geographic", "polygon", "geojson"],
+  "homepage": "https://github.com/username/leaflet-zone-selector",
+  "bugs": {
+    "url": "https://github.com/username/leaflet-zone-selector/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/username/leaflet-zone-selector.git"
+  },
+  "license": "MIT",
+  "author": "Your Name",
   "type": "module",
+  "main": "./dist/leaflet-zone-selector.umd.js",
+  "module": "./dist/leaflet-zone-selector.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/leaflet-zone-selector.es.js",
+      "require": "./dist/leaflet-zone-selector.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:types": "tsc --emitDeclarationOnly --p tsconfig.build.json",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prebuild": "pnpm type-check"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@react-leaflet/core": "^2.1.0",
     "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
@@ -31,7 +60,6 @@
     "@types/jest": "^30.0.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-draw": "^1.0.11",
-    "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
@@ -42,10 +70,12 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
-    "mapbox-gl": "^3.13.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-dts": "^4.3.0"
   }
 }
