--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "tests", "examples"]
+  "exclude": ["node_modules", "dist", "tests", "examples", "**/*.test.ts", "**/*.test.tsx", "src/setupTests.ts"]
 }
