--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@turf/turf": "^7.2.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "rbush": "^4.0.1",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
@@ -75,6 +76,7 @@
     "@types/jest": "^30.0.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet-draw": "^1.0.11",
+    "@types/rbush": "^4.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
